<resources>
        <!--    MainActivity    -->
        <string name="app_name">vasekstestapp</string>
        <string name="btn_plus">+1</string>
        <string name="btn_minus">-1</string>
        <string name="btn_reset">0</string>
        <string name="counter_initial">0</string>
        <string name="error_below_zero">Ниже нуля нельзя!</string>
        <string name="date_format">%1$s %2$d %3$d год</string>
        <!--    SecondActivity      -->
        <string name="btn_go_to_main">На главный экран</string>
        <string name="btn_go_to_second">На второй экран</string>
        <string name="btn_go_to_third">На третий экран</string>
        <string name="btn_back">Назад</string>
        <string name="result_label_second">Ваш счётчик на 2 странице: %1$d</string>
        <string name="result_label_third">Ваш счётчик на 3 странице: %1$d</string>
</resources>
